# krab

./: Cargo.toml  code.krab  readme.md
examples/: basic_if.krab  basic_math.krab  example.krab  factorial.krab
src/: common.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  util.rs
src/ast/: ast.rs  expression.rs  mod.rs  node.rs  statement.rs  tokens.rs
src/common/: mod.rs  tokens.rs  ty.rs  value.rs
src/core/: ast.rs  lexer.rs  mod.rs  parser.rs  parser_type_cache.rs  parser_util.rs
src/eval/: context.rs  eval_expression.rs  eval_node.rs  eval_statement.rs  mod.rs  result.rs
src/runtime/: engine.rs  environment.rs  function.rs  interpreter.rs  mod.rs  scope.rs  variable.rs
src/types/: control_flow.rs  ident.rs  mod.rs  signature.rs  ty.rs  value.rs
tests/: factorial.krab  test.rs  test_expressions.krab  test_functions.krab  test_logical.krab
