[package]
name = "krab"
version = "0.1.3"
edition = "2021"
description = "Krab is a simple and minimalistic interpreted programming language written in Rust."
repository = "https://github.com/tAtomDev/krab"
readme = "README.md"
license = "MIT OR Apache-2.0"

keywords = ["scripting", "scripting-engine", "scripting-language", "embedded"]
categories = ["embedded", "parser-implementations"]

[[bin]]
name = "repl"

[dependencies]
thiserror = "1.0.39"
colored = "2.0"
